<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reddcoin_wallet.RequestActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="58dp"
        android:layout_height="44dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:text="@string/reddcoin_unit"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="233dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="231dp"
            android:layout_height="46dp"
            android:hint="@string/input_credit_prompt"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="271dp"
        android:layout_height="136dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Mike" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="John" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Becky" />
    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/recv_credit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>